--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
 	<pluginRepositories>
 	    <pluginRepository>    
 		<id>maven1</id>
-		<url>http://repo1.maven.org/maven2</url>
+		    <name>Maven.org</name>
+		    <url>http://repo1.maven.org/maven2</url>
 	    </pluginRepository>
 	</pluginRepositories>
 
